# MyVox

./: CMakeLists.txt  README.md
src/: AAB.h  Array3D.h  Geometry.cpp  Geometry.h  Mat4.h  Timer.cpp  Timer.h  Triangle.cpp  Triangle.h  Vec2.cpp  Vec2.h  Vec3.cpp  Vec3.h  main.cpp
